--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<version>10.1.7</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 	</dependencies>
 
