--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+#email config
+email.username=myofficedemomail@gmail.com
+email.password=ydwgkfsxhovrqoiwa
+
+
